# Sockets-SFML

./: CMakeLists.txt
src/: client.cpp  server.cpp
